# may_redis

./: .gitattributes  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE-Apache  LICENSE-MIT  README.md  clippy.toml  rustfmt.toml  test_debug.rs
.github/workflows/: ci.yaml
.hermes/: extract_tests.py
crates/base/: Cargo.toml
crates/base/src/: error.rs  from_redis_value.rs  lib.rs  redis_error.rs  value.rs
crates/client/: Cargo.toml
crates/client/src/: client.rs  in_memory.rs  lib.rs  pipeline.rs
crates/codec/: Cargo.toml
crates/codec/src/: lib.rs  reader.rs  roundtrip.rs  writer.rs
crates/connection/: Cargo.toml
crates/connection/src/: connection.rs  epoll.rs  lib.rs  tcp.rs
crates/may-redis/: Cargo.toml
crates/may-redis/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: builder.rs  commands.rs  lib.rs
docs/: 01-protocol-analysis.md  02-may_postgres_comparison.md  03-sesame-idam-redis-usage.md  06-connection-layer-design.md  09-migration-guide.md  10-test-strategy.md  INDEX.md  JSF_AUDIT_2026_05_28.md  JSF_COMPLIANCE.md  PRD-file-breakdown-audit.md  PRD_TLS_mTLS.md  adr-001-single-crate-structure.md  architecture.md  code-review-2026-05-28.md  command-coverage-audit.md  module-audit.md  perf-test-plan.md  redis-implementation-audit.md
docs/Epics/: 00-epic-overview.md  epic-0-scaffolding.md  epic-1-base.md  epic-2-codec.md  epic-3-protocol.md  epic-4-connection.md  epic-5-client.md  epic-6-integration.md
docs/Epics/Epic_0/: Story_0.md  Story_1.md  Story_2.md  Story_3.md  Story_4.md
docs/Epics/Epic_1/: Story_0.md  Story_1.md  Story_2.md  Story_3.md  Story_4.md
docs/Epics/Epic_10/: Story_0.md  Story_1.md  Story_2.md  Story_3.md  Story_4.md
docs/Epics/Epic_11/: Story_0.md  Story_1.md  Story_10.md  Story_11.md  Story_12.md  Story_13.md  Story_14.md  Story_2.md  Story_3.md  Story_4.md  Story_5.md  Story_6.md  Story_7.md  Story_8.md  Story_9.md
docs/Epics/Epic_12/: Story_0.md  Story_1.md  Story_2.md  Story_3.md  Story_4.md  Story_5.md  Story_6.md  Story_7.md  Story_8.md
docs/Epics/Epic_13/: Story_0.md  Story_1.md  Story_2.md  Story_3.md  Story_4.md  Story_5.md  Story_6.md  Story_7.md  Story_8.md
docs/Epics/Epic_14/: Story_0.md  Story_1.md  Story_1a.md  Story_1b.md  Story_1c.md  Story_1d.md  Story_2.md  Story_2a.md  Story_2b.md  Story_2c.md  Story_2d.md  Story_3.md  Story_3a.md  Story_3b.md  Story_3c.md  Story_3d.md  Story_4.md  Story_4a.md  Story_4b.md  Story_4c.md  Story_4d.md  Story_5.md  Story_5a.md  Story_5b.md  Story_5c.md  Story_5d.md
docs/Epics/Epic_2/: Story_0.md  Story_1.md  Story_2.md  Story_3.md
docs/Epics/Epic_3/: Story_0.md  Story_1.md  Story_2.md  Story_3.md  Story_4.md
docs/Epics/Epic_4/: Story_0.md  Story_1.md  Story_2.md  Story_3.md  Story_4.md
docs/Epics/Epic_5/: Story_0.md  Story_1.md  Story_2.md  Story_3.md  Story_4.md
docs/Epics/Epic_6/: Story_0.md  Story_1.md  Story_2.md  Story_3.md  Story_4.md
docs/Epics/Epic_7/: Story_0.md  Story_1.md  Story_2.md  Story_3.md  Story_4.md  Story_5.md  Story_6.md  Story_7.md
docs/Epics/Epic_8/: Story_0.md  Story_1.md  Story_10.md  Story_11.md  Story_12.md  Story_13.md  Story_14.md  Story_15.md  Story_16.md  Story_17.md  Story_18.md  Story_19.md  Story_2.md  Story_20.md  Story_3.md  Story_4.md  Story_5.md  Story_6.md  Story_7.md  Story_8.md  Story_9.md
docs/Epics/Epic_9/: Story_0.md  Story_1.md  Story_2.md  Story_3.md  Story_4.md  Story_5.md  Story_6.md
docs/Epics/epic-0-scaffolding/docs/: 08-module-structure.md  11-dependencies.md
docs/Epics/epic-3-protocol/docs/: 04-system-design.md  05-protocol-layer-design.md  07-client-api-design.md
examples/: debug_redis.rs
llmwiki/: SCHEMA.md  docs-catalog.md  index.md  log.md
llmwiki/concepts/: command-policy.md  jsf-compliance.md  ssrf-protection.md
llmwiki/reference/: codebase-entry-points.md  command-mapping.md
llmwiki/topics/: code-review-2026-05-28.md  connection-loop-pitfalls.md  may-coroutine-pattern.md  module-breakdown.md  module-structure.md  resp-protocol.md  sesame-idam-integration.md
scripts/: check-file-lengths.sh
src/: lib.rs
src/base/: from_redis_value.rs  mod.rs  redis_error.rs  to_redis_args.rs
src/client/: client.rs  client_tests.rs  client_timeout.rs  client_url.rs  in_memory.rs  in_memory_tests.rs  mod.rs  pipeline.rs  pipeline_response.rs
src/client/client_tests/: integration.rs  unit.rs
src/codec/: mod.rs  reader.rs  reader_tests.rs  roundtrip.rs  roundtrip_tests.rs  writer.rs
src/connection/: connection.rs  connection_io.rs  connection_limits.rs  connection_stream.rs  connection_tests.rs  connection_tls.rs  dispatch.rs  epoll_loop.rs  io_read.rs  io_write.rs  mod.rs  tcp.rs  tcp_tests.rs  test_limits.rs
src/core/: error.rs  error_tests.rs  from_value.rs  from_value_tests.rs  mod.rs  to_args.rs  value.rs
src/protocol/: builder.rs  builder_tests.rs  commands.rs  commands_tests.rs  fake.rs  fake_tests.rs  mod.rs
src/protocol/commands/: admin.rs  admin_tests.rs  hashes.rs  hashes_tests.rs  lists.rs  lists_tests.rs  mod.rs  pubsub.rs  pubsub_tests.rs  sets.rs  sets_tests.rs  sorted_sets.rs  sorted_sets_tests.rs  strings.rs  strings_tests.rs  transactions.rs  transactions_tests.rs
src/tls/: config.rs  connector.rs  mod.rs  tests.rs  tls_stream.rs  verifier.rs
tests/perf/: jwt.rs  main.rs  metrics.rs  mod.rs  redis_ops.rs
tests/perf/scenarios/: mod.rs  population.rs
