[package]
name = "may-redis"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/microscaler/may_redis"
description = "A coroutine-based Redis client for the may runtime"

[dependencies]
bytes = "1.7"
itoa = "1.0"
log = "0.4"
may = { version = "0.3", default-features = false, features = ["io_timeout"] }
socket2 = "0.5"

[features]
default = []
test = []

[dev-dependencies]
fastrand = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
module_name_repetitions = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_safety_doc = "allow"
# JSF-AV Rule 208: No panics in dispatch
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
