[package]
name = "client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Public client API: RedisClient, Pipeline"

[dependencies]
base = { path = "../base" }
codec = { path = "../codec" }
protocol = { path = "../protocol" }
connection = { path = "../connection" }
bytes = "1.7"
may = "0.3"
itoa = "1.0"
log = "0.4"

[features]
default = ["connection", "client"]
connection = []
client = []
pool = []
test = []

[lints]
workspace = true
